--- a/lang/en.yml
+++ b/lang/en.yml
@@ -1,14 +1,12 @@
 en:
-  RateableController:
+  SheaDawson\Rateable\Controllers\RateableController:
     ERRORALREADYRATED: 'Sorry, You have already rated this item'
     ERRORMESSAGE: 'Sorry, there was an error rating this item'
     ERRORNOTFOUNT: 'Sorry, the item you are trying to rate could not be found'
     THANKYOUMESSAGE: 'Thanks for rating!'
-  RateableJS:
-    ERRORALREADYRATED: 'You have already rated this item'
-  Rateable:
+  SheaDawson\Rateable\Extensions\Rateable:
     db_EnableRatings: 'Enable Ratings'
-  Rating:
+  SheaDawson\Rateable\Model\Rating:
     PLURALNAME: Ratings
     SINGULARNAME: Rating
     db_ObjectClass: 'Object Class'
